tests/baselines/reference/assignmentCompatWithStringIndexer.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(15,1): error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived; }'.
  Index signatures are incompatible.
    Type 'Base' is not assignable to type 'Derived'.
      Property 'bar' is missing in type 'Base'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(19,1): error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived2; }'.
  Index signatures are incompatible.
    Type 'Base' is not assignable to type 'Derived2'.
      Property 'baz' is missing in type 'Base'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(33,5): error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived; }'.
  Index signatures are incompatible.
    Type 'Base' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(41,5): error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived2; }'.
  Index signatures are incompatible.
    Type 'Base' is not assignable to type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(46,9): error TS2322: Type '{ [x: string]: Derived; }' is not assignable to type 'A<T>'.
  Index signatures are incompatible.
    Type 'Derived' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(47,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived; }'.
  Index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived'.
      Type 'Base' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(50,9): error TS2322: Type '{ [x: string]: Derived2; }' is not assignable to type 'A<T>'.
  Index signatures are incompatible.
    Type 'Derived2' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(51,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived2; }'.
  Index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived2'.
      Type 'Base' is not assignable to type 'Derived2'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts (8 errors) ====
    // index signatures must be compatible in assignments
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: string]: Base;
    }
    
    var a: A;
    
    var b: { [x: string]: Derived; }
    a = b; // ok
    b = a; // error
    ~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Base' is not assignable to type 'Derived'.
!!! error TS2322:       Property 'bar' is missing in type 'Base'.
    
    var b2: { [x: string]: Derived2; }
    a = b2; // ok
    b2 = a; // error
    ~~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived2; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Base' is not assignable to type 'Derived2'.
!!! error TS2322:       Property 'baz' is missing in type 'Base'.
    
    module Generics {
        class A<T extends Base> {
            [x: string]: T;
        }
    
        class B extends A<Base> {
            [x: string]: Derived; // ok
        }
    
        var b1: { [x: string]: Derived; };
        var a1: A<Base>;
        a1 = b1; // ok
        b1 = a1; // error
        ~~
!!! error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Base' is not assignable to type 'Derived'.
    
        class B2 extends A<Base> {
            [x: string]: Derived2; // ok
        }
    
        var b2: { [x: string]: Derived2; };
        a1 = b2; // ok
        b2 = a1; // error
        ~~
!!! error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived2; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Base' is not assignable to type 'Derived2'.
    
        function foo<T extends Base>() {
            var b3: { [x: string]: Derived; };
            var a3: A<T>;
            a3 = b3; // error
            ~~
!!! error TS2322: Type '{ [x: string]: Derived; }' is not assignable to type 'A<T>'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Derived' is not assignable to type 'T'.
            b3 = a3; // error
            ~~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'Derived'.
!!! error TS2322:       Type 'Base' is not assignable to type 'Derived'.
    
            var b4: { [x: string]: Derived2; };
            a3 = b4; // error
            ~~
!!! error TS2322: Type '{ [x: string]: Derived2; }' is not assignable to type 'A<T>'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Derived2' is not assignable to type 'T'.
            b4 = a3; // error
            ~~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived2; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'Derived2'.
!!! error TS2322:       Type 'Base' is not assignable to type 'Derived2'.
        }
    }